@@ -1,10 +1,16 @@
 import java.util.ArrayList;
 
 public class StatsCalculator {
-    public static <T> void shortStats(ArrayList<T> arrayList){
-        System.out.printf("Количество элементов: %d",arrayList.size());
+    public static <T> void shortStats(String listName, ArrayList<T> arrayList){
+        if (arrayList.isEmpty()){
+            return;
+        }
+        System.out.printf("Количество элементов %s: %d \n", listName, arrayList.size());
     }
     public static <T extends Number> void fullStatsForNumbers(ArrayList<T> arrayList){
+        if (arrayList.isEmpty()){
+            return;
+        }
         double min = Double.MAX_VALUE;
         double max = Double.MIN_VALUE;
         double sum = 0;
@@ -17,24 +23,26 @@ public class StatsCalculator {
             sum += value;
         }
         avg = sum / arrayList.size();
-        if (arrayList.get(0) instanceof Integer){
-            System.out.printf("Integer full stats \n" +
-                    "Count = %d, " +
-                    "Min = %d, " +
-                    "Max = %d, " +
-                    "Sum = %d, " +
-                    "Average = %f%n", arrayList.size(), (int)min, (int)max, sum, avg);
+        if (arrayList.getFirst() instanceof Integer){
+            System.out.printf("Полная статистика для Integer:\n" +
+                    "Количество = %d, " +
+                    "MIN = %d, " +
+                    "MAX = %d, " +
+                    "Сумма = %d, " +
+                    "Среднее = %f \n", arrayList.size(), (int)min, (int)max, (int)sum, avg);
         }else {
-            System.out.printf("Double full stats \n" +
-                    "Count = %d, " +
-                    "Min = %f, " +
-                    "Max = %f, " +
-                    "Sum = %f, " +
-                    "Average = %f%n", arrayList.size(),min, max, sum, avg);
+            System.out.printf("Полная статистика для Double:\n" +
+                    "Количество = %d, " +
+                    "MIN = %.20f, " +
+                    "MAX = %f, " +
+                    "Сумма = %f, " +
+                    "Среднее = %f \n", arrayList.size(),min, max, sum, avg);
         }
-
     }
     public static void fullStatsForString (ArrayList<String> arrayList){
+        if (arrayList.isEmpty()){
+            return;
+        }
         int maxStringLength = arrayList.getFirst().length();
         int minStringLength = arrayList.getFirst().length();
         for (String s : arrayList){
@@ -45,7 +53,9 @@ public class StatsCalculator {
                 minStringLength = s.length();
             }
         }
-        System.out.printf("String full stats \n" +
-                "Total strings = %d, Max = %d, Min = %d", arrayList.size(), maxStringLength, minStringLength);
+        System.out.printf("Полная статистика для String:\n" +
+                "Количество = %d, " +
+                "MAX длина = %d, " +
+                "MIN длина = %d \n", arrayList.size(), maxStringLength, minStringLength);
     }
 }
